# NEUSEG

./: .gitignore  .gitmodules  README.md  pyproject.toml  requirements.txt
.github/workflows/: manual_publish.yml  publish.yml
annotator/: pdnl_annotator.py  requirements.txt
evaluation/: eval_manual_auto_ROIs.ipynb
evaluation/Helper_Functions/: loading.py
neuseg/: main.py
script/: GMM_Segmentation.py  GMM_Segmentation_110725.py  Nuclei_Segmentation.py  neuseg_script.sh
